weblogic/kubernetes/istio/weblogic-jms-traffic-management.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sample-domain2-gateway
  namespace: sample-domain2-ns
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - "sample-domain2.example.com"
      port:
        name: http-sample-domain2
        number: 80
        protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sample-domain2-virtualservice
  namespace: sample-domain2-ns
spec:
  gateways:
    - sample-domain2-gateway
  hosts:
    - "sample-domain2.example.com"
  http:
    - match:
        - uri:
            prefix: /console
      route:
        - destination:
            host: sample-domain2-admin-server.sample-domain2-ns.svc.cluster.local
            port:
              number: 7001
    - route:
        - destination:
            host: sample-domain2-cluster-cluster-1.sample-domain2-ns.svc.cluster.local
            port:
              number: 7999
